@@ -28,10 +28,6 @@ NON-TECH
    *. Test and Fix all those damn new skills.
    *. All Fighters - Combat Training - takes time, transfers weapon specializations to target temporarily and 1 level up max +XP
    *. All Fighters - Guard Duty Auto invoked by AUTOGUARD can start a little "Guarding" prog for, say, 10 rl minutes.
-   *. Classes with insufficient unique skills:
-        *. Fighter       : +2
-                         : Skill to gain permanently more hit points?
-                         : Something to cut damage when below 10% HP
    *. Rideables with some portal you could enter for below decks, etc.
    *. Wants and Needs engine - similar to slavery system
    *. RandomQuests based off the Percolator engine -- a way to randomly generate different quests.
