@@ -649,6 +649,12 @@ With 100 pounds of metal on the ground, the thief may construct \
 a most horrible and astounding trap.  Anyone entering the room \
 with the trap will be killed most horribly.
 
+FIGHTER_DESPERATEMOVES=DESPERATE_MOVES
+DESPERATEMOVES=DESPERATE_MOVES
+DESPERATE_MOVES=<ABILITY>\
+When near death, the fighters desperation beings out their best \
+evasive moves, cutting all damage in half when below 10% hit points.
+
 DIRT=<ABILITY>\
 Usage    : DIRT [TARGET NAME] \n\r\
 Example  : dirt orc\n\r\
@@ -2197,6 +2203,9 @@ This skill is almost always successful \
 if the target is incapacitated (asleep, knocked out, \
 bound, etc).
 
+
+TOUGHNESS=<ABILITY>\
+This ability toughens up the fighter, giving them extra hitpoints.
 
 THIRD=THIRD_ATTACK
 THIRD_ATTACK=<ABILITY>\
